--- a/shop.html
+++ b/shop.html
@@ -55,18 +55,131 @@
         </div>
     </header>
 
-    <div class="collections">
-        <li style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://images.unsplash.com/photo-1514989771522-458c9b6c035a?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NXx8YWlyJTIwbWF4fGVufDB8fDB8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=60);
-">Shoes</li>
-        <li style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://images.unsplash.com/photo-1529374255404-311a2a4f1fd9?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NHx8dHNoaXJ0c3xlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=60);
-">T·Shirts</li>
-        <li style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://images.unsplash.com/photo-1559195690-236f5fab61a9?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NHx8YmFnJTIwcGFja3xlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60;
-">Bags</li>
-        <li style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://images.unsplash.com/photo-1495105787522-5334e3ffa0ef?ixid=MXwxMjA3fDB8MHxzZWFyY2h8Mnx8amFja2V0fGVufDB8fDB8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60);
-">Jackets</li>
-        <li style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://images.unsplash.com/photo-1596177583101-26b7dada4f5c?ixid=MXwxMjA3fDB8MHxzZWFyY2h8N3x8c3VwcGxlbWVudHN8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60);
-">Supplements</li>
+    <div class="collection-heading">Conto</div>
+    <div class="conto">
+
+        <div class="product-card">
+            <img src="https://images.unsplash.com/photo-1596177583101-26b7dada4f5c?ixid=MXwxMjA3fDB8MHxzZWFyY2h8N3x8c3VwcGxlbWVudHN8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="">
+            <div class="text-and-button">
+                <div class="product-details">
+                    <h5 class="product-name">Primal Zinc</h5>
+                    <p class="product-price">$25.00</p>
+                </div>
+
+                <div class="add-to-cart">
+                    <a class="add-to-cart-button" href="shop.html">Add to Cart</a>
+                </div>
+            </div>
+        </div>
+        <div class="product-card">
+            <img src="https://images.unsplash.com/photo-1596177583101-26b7dada4f5c?ixid=MXwxMjA3fDB8MHxzZWFyY2h8N3x8c3VwcGxlbWVudHN8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="">
+            <div class="text-and-button">
+                <div class="product-details">
+                    <h5 class="product-name">Primal Zinc</h5>
+                    <p class="product-price">$25.00</p>
+                </div>
+
+                <div class="add-to-cart">
+                    <a class="add-to-cart-button" href="shop.html">Add to Cart</a>
+                </div>
+            </div>
+        </div>
+        <div class="product-card">
+            <img src="https://images.unsplash.com/photo-1596177583101-26b7dada4f5c?ixid=MXwxMjA3fDB8MHxzZWFyY2h8N3x8c3VwcGxlbWVudHN8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="">
+            <div class="text-and-button">
+                <div class="product-details">
+                    <h5 class="product-name">Primal Zinc</h5>
+                    <p class="product-price">$25.00</p>
+                </div>
+
+                <div class="add-to-cart">
+                    <a class="add-to-cart-button" href="shop.html">Add to Cart</a>
+                </div>
+            </div>
+        </div>
+        <div class="product-card">
+            <img src="https://images.unsplash.com/photo-1596177583101-26b7dada4f5c?ixid=MXwxMjA3fDB8MHxzZWFyY2h8N3x8c3VwcGxlbWVudHN8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="">
+            <div class="text-and-button">
+                <div class="product-details">
+                    <h5 class="product-name">Primal Zinc</h5>
+                    <p class="product-price">$25.00</p>
+                </div>
+
+                <div class="add-to-cart">
+                    <a class="add-to-cart-button" href="shop.html">Add to Cart</a>
+                </div>
+            </div>
+        </div>
+        <div class="product-card">
+            <img src="https://images.unsplash.com/photo-1596177583101-26b7dada4f5c?ixid=MXwxMjA3fDB8MHxzZWFyY2h8N3x8c3VwcGxlbWVudHN8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="">
+            <div class="text-and-button">
+                <div class="product-details">
+                    <h5 class="product-name">Primal Zinc</h5>
+                    <p class="product-price">$25.00</p>
+                </div>
+
+                <div class="add-to-cart">
+                    <a class="add-to-cart-button" href="shop.html">Add to Cart</a>
+                </div>
+            </div>
+        </div>
+
     </div>
+
+
+    <div class="collection-heading">Collections</div>
+    <div class="collections">
+
+        <li style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://images.unsplash.com/photo-1514989771522-458c9b6c035a?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NXx8YWlyJTIwbWF4fGVufDB8fDB8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=60);">Shoes</li>
+        <li style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://images.unsplash.com/photo-1529374255404-311a2a4f1fd9?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NHx8dHNoaXJ0c3xlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=60);">T·Shirts</li>
+        <li style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://images.unsplash.com/photo-1559195690-236f5fab61a9?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NHx8YmFnJTIwcGFja3xlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60;)">Bags</li>
+        <li style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://images.unsplash.com/photo-1495105787522-5334e3ffa0ef?ixid=MXwxMjA3fDB8MHxzZWFyY2h8Mnx8amFja2V0fGVufDB8fDB8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60);">Jackets</li>
+        <li style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://images.unsplash.com/photo-1596177583101-26b7dada4f5c?ixid=MXwxMjA3fDB8MHxzZWFyY2h8N3x8c3VwcGxlbWVudHN8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60);">Supplements</li>
+    </div>
+
+    <div class="collection-heading">On Sale !!</div>
+
+    <div class="on-sale">
+
+        <img src="https://images.unsplash.com/photo-1596177583101-26b7dada4f5c?ixid=MXwxMjA3fDB8MHxzZWFyY2h8N3x8c3VwcGxlbWVudHN8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="">
+        <img src="https://images.unsplash.com/photo-1596177583101-26b7dada4f5c?ixid=MXwxMjA3fDB8MHxzZWFyY2h8N3x8c3VwcGxlbWVudHN8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="">
+        <img src="https://images.unsplash.com/photo-1596177583101-26b7dada4f5c?ixid=MXwxMjA3fDB8MHxzZWFyY2h8N3x8c3VwcGxlbWVudHN8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="">
+        <img src="https://images.unsplash.com/photo-1596177583101-26b7dada4f5c?ixid=MXwxMjA3fDB8MHxzZWFyY2h8N3x8c3VwcGxlbWVudHN8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="">
+        <img src="https://images.unsplash.com/photo-1596177583101-26b7dada4f5c?ixid=MXwxMjA3fDB8MHxzZWFyY2h8N3x8c3VwcGxlbWVudHN8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="">
+
+    </div>
+
+    <div class="collection-heading">New Arrivals</div>
+
+    <div class="new-arrivals">
+        <img src="https://images.unsplash.com/photo-1529374255404-311a2a4f1fd9?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NHx8dHNoaXJ0c3xlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=60" alt="">
+        <img src="https://images.unsplash.com/photo-1529374255404-311a2a4f1fd9?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NHx8dHNoaXJ0c3xlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=60" alt="">
+        <img src="https://images.unsplash.com/photo-1529374255404-311a2a4f1fd9?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NHx8dHNoaXJ0c3xlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=60" alt="">
+        <img src="https://images.unsplash.com/photo-1529374255404-311a2a4f1fd9?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NHx8dHNoaXJ0c3xlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=60" alt="">
+        <img src="https://images.unsplash.com/photo-1529374255404-311a2a4f1fd9?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NHx8dHNoaXJ0c3xlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=60" alt="">
+        <img src="https://images.unsplash.com/photo-1529374255404-311a2a4f1fd9?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NHx8dHNoaXJ0c3xlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=60" alt="">
+
+    </div>
+
+    <footer>
+        <div class="footer-text">
+            <h3> <a href="index.html" class="logo">Ronchez <span>Fitness</span>.</a></h3>
+            <div class="inner-footer-text">
+                <p>Instagram</p>
+                <p>Facebook</p>
+                <p>Email</p>
+                <p>Location</p>
+                <p>Ronchez Fitness.</p>
+            </div>
+            <ul class="inner-footer-text-icons">
+                <li><a class="pages orange" href="https://web.facebook.com/Ronchezfitness"><i class="fa fa-facebook-square"></i></a></li>
+                <li><a class="pages" id="twitter" href="https://twitter.com/ronchezfitness?s=08"><i class="fa fa-twitter"></i></a></li>
+                <li><a class="pages orange" id="youtube" href="https://youtube.com/channel/UCm2YuAW5Hvd57bv503tFmaQ"><i class="fa fa-youtube-play"></i></a></li>
+                <li><a class="pages" id="instagram" href="https://ronchezfitness.com/"><i class="fa fa-instagram"></i></a></li>
+            </ul>
+            <!-- <p>0712345678</p> -->
+        </div>
+    </footer>
 </body>
 
 </html>
